done for article